# ophyd-mmcore

./: .gitignore  README.md  pyproject.toml
src/ophyd_mmcore/: __init__.py  _backend.py  _worker.py
