[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ophyd-mmcore"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ophyd_mmcore"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ophyd_mmcore/**",
]