[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ophyd-mmcore"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ophyd-async>=0.16",
    "pymmcore-plus>=0.17.3",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ophyd_mmcore"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ophyd_mmcore/**",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.mypy]
files = "src/ophyd_mmcore"
pretty = true
python_version = "3.11"

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "D", # enable docstring checks
    "I", # enable imports checks
    "TC", # enable type check imports
    "FA102", # force __future__ imports
]
ignore = ["D100","D104"] # https://docs.astral.sh/ruff/rules/undocumented-public-package/

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"