[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ophyd-mmcore"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ophyd-async>=0.16",
    "pymmcore-plus>=0.17.3",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ophyd_mmcore"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ophyd_mmcore/**",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.4",
]

[tool.pyright]
include = ["src/ophyd_mmcore"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = [
    "D", # enable docstring checks
    "I", # enable imports checks
    "TC", # enable type check imports
    "FA102", # force __future__ imports
]
ignore = ["D100","D104"] # https://docs.astral.sh/ruff/rules/undocumented-public-package/

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
